Fixes hr on homepage to appear on Firefox correctly, amends hero caption for Firefox

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -44,7 +44,7 @@ html
   position: relative
 
 body
-  background: $main-bg
+  background: #FFF
   color: $c-primary
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   margin: 50px 0 67px
@@ -216,7 +216,7 @@ h3
   text-transform: uppercase
   +respond-to(not-xs)
     top: 160px
-    line-height: 22px
+    line-height: 24px
     max-width: 600px
     position: absolute
     padding-top: 0
@@ -237,13 +237,13 @@ h3
     position: relative
     left: 10px
     +respond-to(not-xs)
-      font-size: 23px
+      font-size: 24px
       font-weight: normal
       text-align: left
       line-height: 25px
 
       +respond-to(not-sm)
-        line-height: 23.5px
+        line-height: 24px
 
 
 .button
